# TrikABCL

./: README.md
libMove/distEncoder/: distEncoder.pro  distencoder.cpp  distencoder.h  main.cpp
rosAPI/: CMakeLists.txt  package.xml
rosAPI/src/: AlmostTank_1.ttt  Non-threaded child script  Non-threadedChildScriptAlmostTank  lib.h~  libMove.h  libRobot.h  libRos.cpp  libRos.h  testRos.cpp  testRos.ttt
rosAPI/src/vrep_common/: ForceSensorData.h  JointSetStateData.h  ObjectGroupData.h  ProximitySensorData.h  ScriptFunctionCallData.h  VisionSensorData.h  VisionSensorDepthBuff.h  VrepInfo.h  simRosAddStatusbarMessage.h  simRosAddStatusbarMessageRequest.h  simRosAddStatusbarMessageResponse.h  simRosAppendStringSignal.h  simRosAppendStringSignalRequest.h  simRosAppendStringSignalResponse.h  simRosAuxiliaryConsoleClose.h  simRosAuxiliaryConsoleCloseRequest.h  simRosAuxiliaryConsoleCloseResponse.h  simRosAuxiliaryConsoleOpen.h  simRosAuxiliaryConsoleOpenRequest.h  simRosAuxiliaryConsoleOpenResponse.h  simRosAuxiliaryConsolePrint.h  simRosAuxiliaryConsolePrintRequest.h  simRosAuxiliaryConsolePrintResponse.h  simRosAuxiliaryConsoleShow.h  simRosAuxiliaryConsoleShowRequest.h  simRosAuxiliaryConsoleShowResponse.h  simRosBreakForceSensor.h  simRosBreakForceSensorRequest.h  simRosBreakForceSensorResponse.h  simRosCallScriptFunction.h  simRosCallScriptFunctionRequest.h  simRosCallScriptFunctionResponse.h  simRosClearFloatSignal.h  simRosClearFloatSignalRequest.h  simRosClearFloatSignalResponse.h  simRosClearIntegerSignal.h  simRosClearIntegerSignalRequest.h  simRosClearIntegerSignalResponse.h  simRosClearStringSignal.h  simRosClearStringSignalRequest.h  (+260 more)
ros_node_example/src/ros_node_example/: CMakeLists.txt  package.xml
ros_node_example/src/ros_node_example/src/: talker.cpp
ssl_vision/: README.md
ssl_vision/src/ssl_vision/: CMakeLists.txt  package.xml
ssl_vision/src/ssl_vision/src/: sslClient.cpp  sslConstants.h  sslServer.cpp
ssl_vision/src/ssl_vision/src/protobuf/: CMakeLists.txt  messages_robocup_ssl_static_objects.pb.cc  messages_robocup_ssl_static_objects.pb.h  messages_robocup_ssl_static_objects.proto
ssl_vision/src/ssl_vision/src/staticObjectsPlugin/: main.cpp  staticObjectsConstants.h  staticObjectsServer.cpp  staticObjectsServer.h
telemetry/: README.md
telemetry/src/telemetry/: CMakeLists.txt  package.xml
telemetry/src/telemetry/msg/: Telemetry_data.msg
telemetry/src/telemetry/src/: telemetry_daemon.cpp  telemetry_server.cpp
