<?xml version="1.0"?>
<package>
  <name>ros_node_example</name>
  <version>0.1.0</version>

  <buildtool_depend>catkin</buildtool_depend>
  <description>Base example of ros node to be built and run on TRIK</description>

  <maintainer email="sergeev.ev.dm@gmail.com">Evgeny Sergeev</maintainer>
  <license>Apache</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
