include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
file(GLOB ProtoFiles "*.proto")
if(${CMAKE_CROSSCOMPILING})
    set(PROTOBUF_PROTOC_EXECUTABLE ${TRIK_SDK_ROOT}/sysroots/i686-oesdk-linux/usr/bin/protoc)
endif(${CMAKE_CROSSCOMPILING})
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ${ProtoFiles})
add_library(proto ${PROTO_HEADER} ${PROTO_SRC})